(styles) - Fix contrast daySelector day + count tabs selection for dark mode

--- a/mobile/src/styles/components/_tabsSelection.scss
+++ b/mobile/src/styles/components/_tabsSelection.scss
@@ -64,7 +64,8 @@
       border-radius: 34px;
 
       @media (prefers-color-scheme: dark) {
-        background-color: var(--app-background);
+        background-color: transparent;
+        border: 1px solid var(--app-white);
         color: var(--app-white);
       }
     }
